# tabula-rasa

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  CONTRIBUTING_EXTENDING.md  Dockerfile  GOOD_FIRST_ISSUES.md  GPU_BENCHMARKS.md  Makefile  NEGATIVE_RESULTS.md  QUICKSTART.md  README.md  RESULTS.md  ROADMAP.md  SECURITY.md  _check.js  api_server.py  app.py  auto_train.py  auto_train_history.json  chat_data.jsonl  config.py.bak  docker-compose.yml  dpo_pairs_synthetic.jsonl  exp.bat  experiments.json  export_specialist.py  hermes_server.py  knowledge_base.json  launch_sub.py  mkdocs.yml  mmap_dataset.py  objects.inv  paper.html  paper.tex  paper_draft.md  prepare_dataset.py  pyproject.toml  pytest.ini  quickstart.ipynb  (+25 more)
.github/: dependabot.yml
.github/workflows/: codeql.yml  docs.yml  release.yml  test.yml
Dashboard/: serve.py
Dashboard/core/: dashboard.html  dashboard.js
Dashboard/views/: api_reference.html  architecture_cheatsheet.html  attention_flow.html  attention_inspector.html  checkpoint_manager.html  cl_metrics.html  experiment_comparator.html  fisher_heatmap.html  gpu_training.html  interactive_chat.html  log_viewer.html  loss_curve_analyzer.html  mcts_tree.html  model_config.html  training_monitor.html
checkpoints/: mcts_ablation.pt  tokenizer.json
checkpoints/router/: best.pt  checkpoint_epoch_5.pt  ewc_fisher.pt  phase1.pt  tokenizer.json  training_history.json
data/: meta.json  router_dataset.json
datasets/: capability_question.json  conversation.json  definition_question.json  explanation_question.json  greeting.json  knowledge_base.json  question.json
docs/: index.md
docs/api/: config.md  eval.md  model.md  tokenizer.md  training.md
egefalos/: WHITEPAPER.md  __init__.py  bm25_retrieval.py  code_curriculum.py  code_specialist.py  graduation_daemon.py  grammar_engine.py  grammar_specialist.py  hard_negative_mining.py  hippocampus.py  interpret.py  interpretability.py  language_az.py  math_call.py  math_gym_env.py  mcts.py  mult_scratchpad.py  neocortex.py  ogd.py  online_ewc.py  pattern_specialist.py  pii_scrubber.py  ppo_trainer.py  replay_buffer.py  router.py  router_hippocampus.py  router_sleep_cycle.py  self_improve.py  semantic_game.py  sleep_cycle.py  socratic_stage2.py  socratic_stage3.py  socratic_trainer.py  specialist_consolidation.py  state_specialist.py  tabula_rasa.py  task_queue.py  taxonomy_specialist.py  tool_use.py
experiments/: ablation_lambda_sweep_results.json  ablation_no_ewc_results.json  ablation_three_task_results.json  adaptive_gamma_results.json  benchmark_cl.py  benchmark_results.json  cf_metrics.py  cl_benchmark_results.json  error_bar_results.json  ewc_benchmark_results.json  generate_paper_figures.py  mcts_ablation_results.json  md2html.py  md2pdf.py  plot_lambda_pareto.py  plot_stability.py  plot_three_task.py  plot_trajectories.py  run_ablation_lambda_sweep.py  run_ablation_no_ewc.py  run_ablation_three_task.py  run_adaptive_gamma.py  run_adaptive_gamma_seeds.py  run_benchmarks.py  run_error_bars.py  run_ewc_benchmark.py  run_length_gen.py  run_mcts_ablation.py  run_multi_seed.py  run_scaling_ablation.py  run_sequential_retention.py  run_socratic_training.py  run_standard_ewc.py  sequential_retention_results.json  socratic_dialogue_log.json  socratic_training_results.json  standard_ewc_results.json  tex2html.py
hf_space/: README.md  requirements.txt
notebooks/: socratic_benchmark_colab.ipynb
results/: socratic_comparison.json
scripts/: ablation_batch.py  api_server.py  auto_train.py  build_gpu_package.py  chat_server.py  check_training.py  cl_comparison.py  cli.py  compare_benchmarks.py  compare_moe_vs_dense.py  download_dataset.py  e2e_integration_test.py  export_specialist.py  extract_dpo_pairs.py  extract_pdf.py  fix_api_ports.py  generate_dpo_synthetic.py  health_check.py  hermes_server.py  install.py  launch_sub.py  launch_training.py  launcher.py  llm_server.py  math_benchmarks.py  merge_specialists.py  prepare_dataset.py  push_to_hub.py  run_benchmarks.py  run_code_az.py  run_experiment.py  run_language_az.py  run_stage.py  self_improve.py  socratic_benchmark.py  specialist_network.py  specialist_router.py  test_partial.py  train_algebra.py  train_chat_10m.py  (+12 more)
specialists/capability_question/: lora.pt.bak
specialists/question/: lora.pt.bak
src/experiments/runs/: 2026-06-17_184738_baseline_1M.json  2026-06-17_184738_moe_rasa_1M.json
src/tabula_rasa/: __init__.py  __main__.py  algebra_dataset.py  attention.py  benchmark_export.py  bpe_tokenizer.py  chat_dataset.py  circuit_priors.py  config.py  dataset.py  dataset_generator.py  eval.py  evolution_strategies.py  experiments.py  ffn.py  generate.py  logic_dataset.py  lora.py  math_parser.py  mcts_inference.py  model.py  modular_network.py  norms.py  orchestrator.py  probe.py  rag.py  rope.py  text_dataset.py  tokenizer.py  transformer_block.py
src/tabula_rasa/cl/: expert_ewc.py  lwf_gem.py  mas.py  ogd.py  online_ewc.py
src/tabula_rasa/cognitive/: code_curriculum.py  code_sandbox.py  code_specialist.py  graduation_daemon.py  grammar_engine.py  grammar_specialist.py  interpret.py  interpretability.py  language_az.py  logic_verifier.py  math_call.py  neocortex.py  p2p_daemon.py  pattern_specialist.py  pythagoras.py  semantic_game.py  state_specialist.py  taxonomy_specialist.py
src/tabula_rasa/cognitive/piaget/: __init__.py  concrete_operational.py  (+4 more)
src/tabula_rasa/reasoning/: math_gym_env.py  mcts.py  micro_orchestrator.py  socratic_critique.py  socratic_stage1.py  socratic_stage2.py  socratic_stage3.py  socratic_trainer.py  tool_use.py
src/tabula_rasa/router/: router.py  router_dataset.py  router_hippocampus.py  router_model.py  router_sleep_cycle.py
src/tabula_rasa/server/: ai_server.py
src/tabula_rasa/training/: bm25_retrieval.py  hard_negative_mining.py  mult_scratchpad.py  ppo_trainer.py  self_improve.py  specialist_consolidation.py  task_queue.py
tests/: conftest.py  test_config.py  test_dataset.py  test_integration.py  test_lora.py  test_model.py  test_property_based.py  test_text.py  test_tokenizer.py
