[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tabula-rasa"
version = "1.3.0"
description = "Learning from scratch, one specialist at a time — blank-slate developmental AI with continual learning"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Tabula Rasa AI", email = "babischatzipanagiotou14@gmail.com"},
]
keywords = [
    "continual-learning", "tabula-rasa", "pytorch-transformer",
    "curriculum-learning", "ewc", "elastic-weight-consolidation",
    "machine-learning", "developmental-ai", "blank-slate",
    "mixture-of-experts", "neuromorphic"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Artificial Intelligence :: Machine Learning",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "tqdm>=4.60.0",
    "psutil>=5.0",
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/Matrix-Research-Ai/tabula-rasa"
Repository = "https://github.com/Matrix-Research-Ai/tabula-rasa"
Documentation = "https://github.com/Matrix-Research-Ai/tabula-rasa"
Telegram = "https://t.me/TabulaRasaAi"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "black>=24.0",
    "isort>=5.0",
    "flake8>=7.0",
]
dashboard = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
]
interpretability = [
    "captum>=0.7.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["tabula_rasa*"]

[tool.setuptools.package-data]
tabula_rasa = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
