[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tabula-rasa"
version = "1.3.0"
description = "Learning from scratch, one specialist at a time — blank-slate developmental AI with continual learning"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Tabula Rasa AI", email = "babischatzipanagiotou14@gmail.com"},
]
keywords = [
    "continual-learning", "tabula-rasa", "pytorch-transformer",
    "curriculum-learning", "ewc", "elastic-weight-consolidation",
    "machine-learning", "developmental-ai", "blank-slate",
    "mixture-of-experts", "neuromorphic"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Artificial Intelligence :: Machine Learning",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "tqdm>=4.60.0",
    "psutil>=5.0",
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/Matrix-Research-Ai/tabula-rasa"
Repository = "https://github.com/Matrix-Research-Ai/tabula-rasa"
Documentation = "https://github.com/Matrix-Research-Ai/tabula-rasa"
Telegram = "https://t.me/TabulaRasaAi"

[project.scripts]
tabula-rasa = "tabula_rasa.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "hypothesis>=6.0",
    "mypy>=1.0",
    "ruff>=0.4.0",
]
dashboard = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
]
interpretability = [
    "captum>=0.7.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["tabula_rasa*"]

[tool.setuptools.package-data]
tabula_rasa = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short --cov=tabula_rasa.config --cov=tabula_rasa.model --cov=tabula_rasa.tokenizer --cov=tabula_rasa.dataset --cov=tabula_rasa.eval --cov=tabula_rasa.rope --cov=tabula_rasa.norms --cov=tabula_rasa.attention --cov=tabula_rasa.ffn --cov=tabula_rasa.transformer_block --cov=tabula_rasa.experiments --cov=tabula_rasa.generate --cov=tabula_rasa.lora --cov=tabula_rasa.training.mult_scratchpad"

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501", "N812", "W293", "F841", "E741", "F401", "F601",
          "E701", "E702", "E722", "E402", "N806", "F403", "F405"]

[tool.ruff.format]
quote-style = "single"
